fix: styling on mobile

--- a/docs/quartz/styles/custom.scss
+++ b/docs/quartz/styles/custom.scss
@@ -90,6 +90,10 @@ tr {
 
   @media all and ($mobile) {
     margin-top: 2rem;
+
+    & > .page-header {
+      padding: 1rem 2rem !important;
+    }
   }
 }
 
